package design.command;

/**
 * @ClassName Command
 * @Description TODO
 * @Author msi
 * @Date 2019/6/17 19:16
 */
public abstract class Command {
	/**
	 * 执行请求方法
	 */
	public abstract void execute();
}
